corrects spacing

--- a/app/page.scss
+++ b/app/page.scss
@@ -4,7 +4,7 @@
 
 .app {
   height: 100%;
-  max-width: 1536px;
+  max-width: 1420px;
   margin: 0 auto;
   padding: var(--spacing-40);
   display: flex;
